# AlphaConsole

./: .gitignore  minio.license  mkdocs.yml  mock_tester_manifest.json  move_docs.sh  report.md
.agents/rules/: documentation-sync.md  organisation.md  records.md  responsiveness.md
.github/workflows/: deploy.yml
ADR/: ADR-2026-04-27.md  ADR-2026-04-28.md
AlphaConsole/: package.json  postcss.config.mjs
Design/DesignSystem/: Component_Library.md  Core_Tokens.md
Design/FeatureDesigns/: Agents_Feature.md  Dashboard_Feature.md  Reviewer_Agent_Feature.md  Settings_Feature.md  Workflows_Feature.md
Design/Mockups/: 01_landing.html  02_dashboard.html  03_create_task.html  04_approval.html  05_completion.html  06_workflows.html  07_agents.html  09_settings.html
Specs/: Instance_Lifecycle_Specs.md  vast_provisioning_draft.sh
agents/: memory_agent.py  planner_agent.py  reviewer_agent.py  tester_agent.py
alpha-console/: package.json
control-plane/: Dockerfile  README.md  alembic.ini  pyproject.toml
control-plane/alembic/: env.py
control-plane/app/: main.py
control-plane/app/api/: compute.py  objectives.py  reviewer.py
control-plane/app/core/: config.py
control-plane/app/db/: session.py
control-plane/app/models/: __init__.py  agent_log.py  objective.py  task.py  workflow.py
control-plane/app/services/: nats_svc.py  vast_svc.py
control-plane/tests/: test_compute.py
deployment/: .env.example  docker-compose.yml
docs/: Testing_Strategy.md  index.md
scripts/: init_system.sh
worker-runtime/: Dockerfile  go.mod  main.go  pool.go  pool_test.go
(+50 files in other folders)
